--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/fira-code": "^5.0.18",
     "@fontsource-variable/onest": "^5.0.4",
+    "@fontsource/geist-mono": "^5.0.3",
     "astro": "^4.8.6",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
