--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource-variable/onest": "^5.0.4",
     "@fontsource/geist-mono": "^5.0.3",
     "astro": "^4.8.6",
+    "sass": "^1.77.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
