--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/react": "^3.5.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/fira-code": "^5.0.18",
     "@fontsource-variable/onest": "^5.0.4",
     "@fontsource/geist-mono": "^5.0.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.8.6",
+    "framer-motion": "^11.2.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "sass": "^1.77.4",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "usehooks-ts": "^3.1.0"
   }
 }
