--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/react": "^3.5.0",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/fira-code": "^5.0.18",
+    "@fontsource-variable/inter": "^5.0.18",
     "@fontsource-variable/onest": "^5.0.4",
     "@fontsource/geist-mono": "^5.0.3",
     "@types/react": "^18.3.3",
@@ -24,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.4",
+    "swiper": "^11.1.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "usehooks-ts": "^3.1.0"
