--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "usehooks-ts": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/react-lines-ellipsis": "^0.15.6"
   }
 }
