mejoras en muchas areas de la aplicación, web casi terminada y preparada para poner en producción

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource-variable/inter": "^5.0.18",
     "@fontsource-variable/onest": "^5.0.4",
     "@fontsource/geist-mono": "^5.0.3",
+    "@fontsource/titillium-web": "^5.0.20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.8.6",
