--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.8.6",
-    "framer-motion": "^11.2.10",
+    "framer-motion": "^11.18.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1",
+    "react-icons": "^5.5.0",
     "sass": "^1.77.4",
     "swiper": "^11.1.4",
     "tailwindcss": "^3.4.3",
