fix(i18n): normalize title capitalization to sentence case across all content
- Fix Spanish titles to use sentence case (solo primera letra mayúscula)
- Fix English titles to use sentence case consistently
- Update content files: aboutme.json, projects.json, contact.json, hero.json
- Update React components: AboutMe.tsx, Contact.tsx, Projects.tsx
- Ensure consistent capitalization rules for both Spanish and English versions

--- a/src/content/en/projects.json
+++ b/src/content/en/projects.json
@@ -1,6 +1,6 @@
 {
   "badge": "Featured Projects",
-  "title": "My Projects",
+  "title": "My projects",
   "description": {
     "intro": "Each project is a",
     "highlight": "unique story",
@@ -34,7 +34,7 @@
       ]
     },
     "personalPortfolio": {
-      "title": "Personal Portfolio",
+      "title": "Personal portfolio",
       "subtitle": "Santiago Martelli",
       "category": "Full-Stack",
       "body": "Personal portfolio designed with focus on performance and smooth visual experience. Implements modern architecture with Astro, React and TypeScript, following SOLID principles and modern design patterns for maximum performance.",
